--- a/classes/_classes_database_database_.collection.html
+++ b/classes/_classes_database_database_.collection.html
@@ -40,6 +40,8 @@
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
 							<input type="checkbox" id="tsd-filter-externals" checked />
 							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
+							<input type="checkbox" id="tsd-filter-only-exported" />
+							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -167,7 +169,7 @@
 					<a name="firstexample" class="tsd-anchor"></a>
 					<h3>first<wbr>Example</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">first<wbr>Example<span class="tsd-signature-symbol">(</span>example<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">IObjectAny</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_lib_option_.option.html" class="tsd-signature-type">Option</a><span class="tsd-signature-symbol">&lt;</span><a href="_classes_database_dbobject_.dbobject.html" class="tsd-signature-type">DBObject</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">first<wbr>Example<span class="tsd-signature-symbol">(</span>example<span class="tsd-signature-symbol">: </span><a href="../interfaces/_classes_database_database_.iobjectany.html" class="tsd-signature-type">IObjectAny</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_lib_option_.option.html" class="tsd-signature-type">Option</a><span class="tsd-signature-symbol">&lt;</span><a href="_classes_database_dbobject_.dbobject.html" class="tsd-signature-type">DBObject</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -179,7 +181,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>example: <span class="tsd-signature-type">IObjectAny</span></h5>
+									<h5>example: <a href="../interfaces/_classes_database_database_.iobjectany.html" class="tsd-signature-type">IObjectAny</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_lib_option_.option.html" class="tsd-signature-type">Option</a><span class="tsd-signature-symbol">&lt;</span><a href="_classes_database_dbobject_.dbobject.html" class="tsd-signature-type">DBObject</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">T</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -225,8 +227,23 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../interfaces/_classes_database_database_.iobjectany.html" class="tsd-kind-icon">IObject<wbr>Any</a>
+					</li>
 					<li class=" tsd-kind-type-alias tsd-parent-kind-external-module">
 						<a href="../modules/_classes_database_database_.html#arangocollection" class="tsd-kind-icon">Arango<wbr>Collection</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_classes_database_database_.html#arango_database" class="tsd-kind-icon">ARANGO_<wbr>DATABASE</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_classes_database_database_.html#arango_host" class="tsd-kind-icon">ARANGO_<wbr>HOST</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_classes_database_database_.html#arango_password" class="tsd-kind-icon">ARANGO_<wbr>PASSWORD</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_classes_database_database_.html#arango_user" class="tsd-kind-icon">ARANGO_<wbr>USER</a>
 					</li>
 				</ul>
 			</nav>
