--- a/classes/_lib_schema_.schema.html
+++ b/classes/_lib_schema_.schema.html
@@ -40,6 +40,8 @@
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
 							<input type="checkbox" id="tsd-filter-externals" checked />
 							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
+							<input type="checkbox" id="tsd-filter-only-exported" />
+							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -97,6 +99,7 @@
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-class"><a href="_lib_schema_.schema.html#name" class="tsd-kind-icon">name</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><a href="_lib_schema_.schema.html#validator" class="tsd-kind-icon">validator</a></li>
 							</ul>
 						</section>
 						<section class="tsd-index-section ">
@@ -143,6 +146,16 @@
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in lib/schema.ts:23</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-private">
+					<a name="validator" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagPrivate">Private</span> validator</h3>
+					<div class="tsd-signature tsd-kind-icon">validator<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Ajv.ValidateFunction</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in lib/schema.ts:24</li>
 						</ul>
 					</aside>
 				</section>
@@ -198,6 +211,9 @@
 							<li class=" tsd-kind-property tsd-parent-kind-class">
 								<a href="_lib_schema_.schema.html#name" class="tsd-kind-icon">name</a>
 							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-class tsd-is-private">
+								<a href="_lib_schema_.schema.html#validator" class="tsd-kind-icon">validator</a>
+							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_lib_schema_.schema.html#validate" class="tsd-kind-icon">validate</a>
 							</li>
@@ -205,8 +221,23 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../interfaces/_lib_schema_.iobjectany.html" class="tsd-kind-icon">IObject<wbr>Any</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_lib_schema_.html#ajv" class="tsd-kind-icon">ajv</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_lib_schema_.html#readfile" class="tsd-kind-icon">read<wbr>File</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_lib_schema_.html#readdir" class="tsd-kind-icon">readdir</a>
+					</li>
 					<li class=" tsd-kind-variable tsd-parent-kind-external-module">
 						<a href="../modules/_lib_schema_.html#schemas" class="tsd-kind-icon">schemas</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_lib_schema_.html#stat" class="tsd-kind-icon">stat</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="../modules/_lib_schema_.html#getschema" class="tsd-kind-icon">get<wbr>Schema</a>
