--- a/interfaces/_lib_utils_argparse_.ioptiondef.html
+++ b/interfaces/_lib_utils_argparse_.ioptiondef.html
@@ -40,6 +40,8 @@
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
 							<input type="checkbox" id="tsd-filter-externals" checked />
 							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
+							<input type="checkbox" id="tsd-filter-only-exported" />
+							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -189,6 +191,12 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_lib_utils_argparse_.html#getenclosed" class="tsd-kind-icon">get<wbr>Enclosed</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../modules/_lib_utils_argparse_.html#getoptions" class="tsd-kind-icon">get<wbr>Options</a>
+					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="../modules/_lib_utils_argparse_.html#parsearguments" class="tsd-kind-icon">parse<wbr>Arguments</a>
 					</li>
