--- a/modules/_game_classes_endpoint_devices_.html
+++ b/modules/_game_classes_endpoint_devices_.html
@@ -40,6 +40,8 @@
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
 							<input type="checkbox" id="tsd-filter-externals" checked />
 							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
+							<input type="checkbox" id="tsd-filter-only-exported" />
+							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -74,6 +76,12 @@
 								<li class="tsd-kind-class tsd-parent-kind-external-module"><a href="../classes/_game_classes_endpoint_devices_.device.html" class="tsd-kind-icon">Device</a></li>
 							</ul>
 						</section>
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Interfaces</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_game_classes_endpoint_devices_.ideviceevents.html" class="tsd-kind-icon">IDevice<wbr>Events</a></li>
+							</ul>
+						</section>
 					</div>
 				</section>
 			</section>
@@ -93,6 +101,9 @@
 				<ul class="before-current">
 					<li class=" tsd-kind-class tsd-parent-kind-external-module">
 						<a href="../classes/_game_classes_endpoint_devices_.device.html" class="tsd-kind-icon">Device</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../interfaces/_game_classes_endpoint_devices_.ideviceevents.html" class="tsd-kind-icon">IDevice<wbr>Events</a>
 					</li>
 				</ul>
 			</nav>
