--- a/modules/_game_classes_endpoint_networkinterfaces_.html
+++ b/modules/_game_classes_endpoint_networkinterfaces_.html
@@ -40,6 +40,8 @@
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
 							<input type="checkbox" id="tsd-filter-externals" checked />
 							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
+							<input type="checkbox" id="tsd-filter-only-exported" />
+							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -64,6 +66,31 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel-group tsd-index-group">
+				<h2>Index</h2>
+				<section class="tsd-panel tsd-index-panel">
+					<div class="tsd-index-content">
+						<section class="tsd-index-section ">
+							<h3>Modules</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-module tsd-parent-kind-external-module"><a href="_game_classes_endpoint_networkinterfaces_.networkinterfaces.html" class="tsd-kind-icon">Network<wbr>Interfaces</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Classes</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported"><a href="../classes/_game_classes_endpoint_networkinterfaces_.networkinterface.html" class="tsd-kind-icon">Network<wbr>Interface</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Interfaces</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_game_classes_endpoint_networkinterfaces_.inetworkinterfacesevents.html" class="tsd-kind-icon">INetwork<wbr>Interfaces<wbr>Events</a></li>
+							</ul>
+						</section>
+					</div>
+				</section>
+			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
@@ -73,11 +100,22 @@
 					</li>
 					<li class="current tsd-kind-external-module">
 						<a href="_game_classes_endpoint_networkinterfaces_.html">"game/classes/endpoint/networkinterfaces"</a>
+						<ul>
+							<li class=" tsd-kind-module tsd-parent-kind-external-module">
+								<a href="_game_classes_endpoint_networkinterfaces_.networkinterfaces.html">Network<wbr>Interfaces</a>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-class tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../classes/_game_classes_endpoint_networkinterfaces_.networkinterface.html" class="tsd-kind-icon">Network<wbr>Interface</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../interfaces/_game_classes_endpoint_networkinterfaces_.inetworkinterfacesevents.html" class="tsd-kind-icon">INetwork<wbr>Interfaces<wbr>Events</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
