--- a/modules/_lib_utils_colors_index_.html
+++ b/modules/_lib_utils_colors_index_.html
@@ -40,6 +40,8 @@
 							<label class="tsd-widget" for="tsd-filter-inherited">Inherited</label>
 							<input type="checkbox" id="tsd-filter-externals" checked />
 							<label class="tsd-widget" for="tsd-filter-externals">Externals</label>
+							<input type="checkbox" id="tsd-filter-only-exported" />
+							<label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
 						</div>
 					</div>
 					<a href="#" class="tsd-widget menu no-caption" data-toggle="menu">Menu</a>
@@ -68,13 +70,50 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Interfaces</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported"><a href="../interfaces/_lib_utils_colors_index_.icolorsobject.html" class="tsd-kind-icon">IColors<wbr>Object</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-not-exported">
+							<h3>Variables</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported"><a href="_lib_utils_colors_index_.html#colorscache" class="tsd-kind-icon">colors<wbr>Cache</a></li>
+								<li class="tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported"><a href="_lib_utils_colors_index_.html#lastcache" class="tsd-kind-icon">last<wbr>Cache</a></li>
+							</ul>
+						</section>
 						<section class="tsd-index-section ">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-function tsd-parent-kind-external-module"><a href="_lib_utils_colors_index_.html#colorize" class="tsd-kind-icon">colorize</a></li>
+								<li class="tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported"><a href="_lib_utils_colors_index_.html#loadcolors" class="tsd-kind-icon">load<wbr>Colors</a></li>
 							</ul>
 						</section>
 					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+				<h2>Variables</h2>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="colorscache" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagLet">Let</span> colors<wbr>Cache</h3>
+					<div class="tsd-signature tsd-kind-icon">colors<wbr>Cache<span class="tsd-signature-symbol">:</span> <a href="../interfaces/_lib_utils_colors_index_.icolorsobject.html" class="tsd-signature-type">IColorsObject</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in lib/utils/colors/index.ts:6</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="lastcache" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagLet">Let</span> last<wbr>Cache</h3>
+					<div class="tsd-signature tsd-kind-icon">last<wbr>Cache<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> =&nbsp;0</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in lib/utils/colors/index.ts:5</li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
@@ -102,6 +141,23 @@
 						</li>
 					</ul>
 				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+					<a name="loadcolors" class="tsd-anchor"></a>
+					<h3>load<wbr>Colors</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<li class="tsd-signature tsd-kind-icon">load<wbr>Colors<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/_lib_utils_colors_index_.icolorsobject.html" class="tsd-signature-type">IColorsObject</a><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in lib/utils/colors/index.ts:12</li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="../interfaces/_lib_utils_colors_index_.icolorsobject.html" class="tsd-signature-type">IColorsObject</a><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -117,8 +173,20 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-interface tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="../interfaces/_lib_utils_colors_index_.icolorsobject.html" class="tsd-kind-icon">IColors<wbr>Object</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_lib_utils_colors_index_.html#colorscache" class="tsd-kind-icon">colors<wbr>Cache</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_lib_utils_colors_index_.html#lastcache" class="tsd-kind-icon">last<wbr>Cache</a>
+					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-external-module">
 						<a href="_lib_utils_colors_index_.html#colorize" class="tsd-kind-icon">colorize</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-external-module tsd-is-not-exported">
+						<a href="_lib_utils_colors_index_.html#loadcolors" class="tsd-kind-icon">load<wbr>Colors</a>
 					</li>
 				</ul>
 			</nav>
